# service/src/main/java/ru/axenix/smartax/dui/service/application/page/domain/PageEntity.java
@@ -1,9 +1,12 @@
 package ru.axenix.smartax.dui.service.application.page.domain;
 
+import com.fasterxml.jackson.annotation.JsonSetter;
+import com.fasterxml.jackson.annotation.Nulls;
 import jakarta.persistence.Column;
 import jakarta.persistence.Entity;
 import jakarta.persistence.Id;
 import jakarta.persistence.Table;
+import jakarta.validation.constraints.NotNull;
 import lombok.AllArgsConstructor;
 import lombok.Builder;
 import lombok.Getter;
@@ -14,6 +17,9 @@ import org.hibernate.annotations.UpdateTimestamp;
 import org.hibernate.type.SqlTypes;
 
 import java.time.LocalDateTime;
+import java.util.ArrayList;
+import java.util.List;
+import java.util.Map;
 import java.util.UUID;
 
 /**
@@ -42,17 +48,30 @@ public class PageEntity {
     private String name;
 
     /**
-     * Наименование старницы
+     * Наименование страницы
      */
     @Column(name = "title", nullable = false)
     private String title;
 
     /**
-     * Объект json страницы
+     * Список инструкций страниц коллекции.
      */
+    @NotNull
+    @Builder.Default
+    @JsonSetter(nulls = Nulls.AS_EMPTY)
     @JdbcTypeCode(SqlTypes.JSON)
-    private String instructions;
+    @Column(nullable = false, columnDefinition = "jsonb")
+    private List<Map<String, Object>> pages = new ArrayList<>();
 
+    /**
+     * Список моков запросов коллекции.
+     */
+    @NotNull
+    @Builder.Default
+    @JsonSetter(nulls = Nulls.AS_EMPTY)
+    @JdbcTypeCode(SqlTypes.JSON)
+    @Column(nullable = false, columnDefinition = "jsonb")
+    private List<Map<String, Object>> mocks = new ArrayList<>();
     /**
      * Создатель записи
      */
